mobileapp.css
/* ... */
.mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-last-post {
    font-size: 1.2rem;
}

.mma-forumng-discussion-list .mma-forumng-discussion.forumng-timeout *,
.mma-forumng-discussion-list .mma-forumng-discussion.forumng-deleted * {
    color: #888;
}

.mma-forumng-discussion-list .mma-forumng-discussion ion-label,
.mma-forumng-discussion-list .mma-forumng-discussion-sort {
    margin: 0 !important;
}

.mma-forumng-infinite-scroll,
.mma-empty-discussion {
    height: 50px;
}

ion-app.md .mma-forumng-infinite-scroll {
    height: 70px;
}

html[style="font-size: 93.75%;"] .mma-forumng-discussion-listing .select-icon .select-icon-inner {
    margin-top: 0px;
}

/* Posts listing page */
ion-app.app-root .mma-forumng-posts-list-wrapper .item .item-inner,
.mma-forumng-add-discussion .item.mma-forumng-label-message .item-inner {
    padding-right: 0;
}
.mma-forumng-posts-list-wrapper {
    background-color: #fff;
}

.mma-forumng-posts-list-wrapper .forumng-iconsize {
    display: flex;
}
.mma-forumng-posts-list-wrapper .mma-forumng-iconsize-correction {
    line-height: 1;
    margin-right: 5px;
}
.mma-forumng-posts-list-wrapper .unread-post {
    background-color: #e7f4fa;
}
.mma-forumng-posts-list-wrapper .unread-post .mma-forumng-startedate,
.mma-forumng-posts-list-wrapper .unread-post .mma-forumng-edit {
    font-weight: 700;
}
.mma-forumng-posts-list-wrapper .forumng-important {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    border: 2px solid #0b55a8;
}
.mma-forumng-posts-list-wrapper .forumng-important .important-badge {
    background-color: #0b55a8;
    color: #fff;
    padding: 0 5px;
    font-size: 1em;
    min-width: 109px;
    min-height: 21px;
    width: fit-content;
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
}
.mma-forumng-posts-list-wrapper .mma-forumng-p1.unread-post ion-item,
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .unread-post ion-item {
    background-color: inherit;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .deleted-post .mma-forumng-posts-subject {
    text-decoration: line-through;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .deleted-post .mma-forumng-posts-subject,
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .deleted-post .mma-forumng-posts-message p {
    color: #a5a5a5;
}

.mma-forumng-posts-list-wrapper .mma-forumng-posts-list .mma-forumng-post-reply {
    background-color: #ffffff;
}

.mma-forumng-posts-list-wrapper .mma-forumng-posts-list .mma-forumng-iconsize-correction ion-icon[item-start] {
    margin: 0;
}
.mma-forumng-posts-list-wrapper .mma-forumng-posts-list {
    padding-bottom: 1px;
}
.mma-forumng-posts-list .item ion-avatar[item-start] {
    min-width: 35px;
    min-height: 35px;
}

[dir="ltr"]  .mma-forumng-posts-list-wrapper .mma-forumng-p1 {
    padding-left: 0px;
}
.mma-forumng-posts-list-wrapper .mma-forumng-commands-buttons {
    padding: 0 0 2px 0;
    margin-top: 15px;
}
.mma-forumng-posts-list-wrapper .mma-forumng-commands-buttons .mma-forumng-row-max .col {
    padding: 10px 10px 0 0;
}
.mma-forumng-posts-list-wrapper .mma-forumng-commands-buttons .mma-forumng-row-max .col button {
    font-size: .92857em;
}
.mma-forumng-startedby {
    color: #0b55a8;
    font-size: 1em;
}
.mma-forumng-startedby strong {
    display: block;
    margin-top: 3px;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-forumng-post-info {
    padding: var(--default-margin) calc(var(--default-margin) * 2) 0 var(--default-margin);
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-forumng-posts {
    padding: 18px calc(var(--default-margin) * 2) 15px var(--default-margin);
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-info ion-avatar[item-start] {
    margin: 0 8px 0 0;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-startedate {
    color: #000;
    font-size: 1em;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-edit,
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-iconsize-correction {
    font-size: .857142em;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-iconsize-correction ion-icon,
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-post-reply-expandall[item-end],
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-post-subreply-expandall[item-end] {
    margin: 0;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .unread-badge {
    font-size: .857142em;
    font-weight: 700;
    color: #fff;
    background-color: #0b55a8;
    width: fit-content;
    height: fit-content;
    min-width: 80px;
    min-height: 15px;
    border-radius: 3px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 3px;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-forumng-posts .mma-forumng-posts-delete-info + .mma-forumng-posts-subject {
    display: block;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-info .unread-badge core-format-text {
    margin: 0 5px;
}

.mma-forumng-posts-list-wrapper .mma-forumng-post-info .mma-forumng-startedby {
    vertical-align: middle;
    line-height: 1;
}

.mma-forumng-important img {
    width: 1.2rem;
}

.mma-forumng-posts-message strong {
    color: #002158;
    display: block;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply {
    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, .3);
    box-shadow: 0px 1px 3px rgba(0, 0, 0, .3);
    margin: var(--default-margin);
    width: auto;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .item-inner,
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply .item-inner .sub-reply {
    padding: 0;
}
.mma-forumng-posts-list-wrapper .mma-forumng-post-reply ion-list:not(.mma-forumng-attachments) {
    border-top: 1px solid #dedede;
}
/* ... */

